[metadata]
name = flash-test
summary = Flash-test is a Tempest extension with SSH capabilities no matter what Network setup is choosen
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    flash_test

[entry_points]
tempest.test_plugins =
    flash-test = flash_test_tempest.plugin:BaseFlashTest


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = flash_test/locale
domain = flash_test

[update_catalog]
domain = flash_test
output_dir = flash_test/locale
input_file = flash_test/locale/flash_test.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = flash_test/locale/flash_test.pot
